--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               </li>
               <li>
                 <a href="#reporting_materials" class="header__link mr-5 text-white hover:text-activeRed">Отчетные
-                  материалы_</a>
+                  материалы</a>
               </li>
 
 
