--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Unbounded:wght@200..900&display=swap"
     rel="stylesheet">
   <title>Приоритет 2030 ВМедА</title>
-  <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="./css/swiper-bundle.min.css" />
   <link rel="stylesheet" href="./css/style.css">
-  <script src="/js/jquery-3.7.1.js"></script>
+  <script src="./js/jquery-3.7.1.js"></script>
 </head>
 
 <body class="lex flex-col max-h-screen">
@@ -1246,7 +1246,7 @@ load_data();
   <!-- Подключаем файл скриптов -->
 
   <script src="./js/swiper-bundle.min.js"></script>
-  <script src=".js/script.js"></script>
+  <script src="./js/script.js"></script>
 
 
 </body>
